# oxidize-db

./: ARCHITECTURE.md  Cargo.toml  LICENSE  README.md  ROADMAP.md
.github/workflows/: ci.yml
crates/oxidize-cli/: Cargo.toml
crates/oxidize-cli/src/: main.rs
crates/oxidize-core/: Cargo.toml
crates/oxidize-core/src/: error.rs  lib.rs
crates/oxidize-core/src/btree/: cursor.rs  mod.rs  node.rs  page.rs
crates/oxidize-core/src/pager/: cache.rs  io.rs  mod.rs
crates/oxidize-core/src/schema/: mod.rs  types.rs
crates/oxidize-core/src/sql/: ast.rs  mod.rs  parser.rs
crates/oxidize-core/src/vdbe/: mod.rs  opcodes.rs  vm.rs
crates/oxidize-core/src/wal/: mod.rs
