[workspace]
resolver = "2"
members = ["crates/oxidize-core", "crates/oxidize-cli"]

[workspace.dependencies]
thiserror   = "1"
sqlparser    = "0.53"
byteorder   = "1"
parking_lot  = "0.12"
moka         = { version = "0.12", features = ["sync"] }
tokio        = { version = "1", features = ["full"] }
serde        = { version = "1", features = ["derive"] }
bincode      = "1"
clap         = { version = "4", features = ["derive"] }
